# mini-lisp

./: README.md
python/: .gitignore  pyproject.toml
python/lisp_py/: lexer.py  tokens.py
python/tests/: test_lexer.py
